Fix alignment of our package and stats columns

--- a/assets/css/frontend/components/our-packages.css
+++ b/assets/css/frontend/components/our-packages.css
@@ -2,6 +2,13 @@ div.wp-block-group.pmk-packages {
 	color: var(--pmk-global-color-primary);
 	margin-bottom: var(--pmk-spacing-components);
 
+	@media (--wp-small) and (--wp-medium-max) {
+		.wp-block-column:not(:only-child) {
+			flex-basis: calc(50% - 1.5em) !important; /* !important to override column styles */
+			flex-grow: 1;
+		}
+	}
+
 	& .wp-block-group__inner-container {
 
 		@mixin has-full-width-background;
@@ -35,7 +42,7 @@ div.wp-block-group.pmk-packages {
 		line-height: var(--pmk-text-small-line-height);
 		margin: var(--pmk-spacing-internal-small);
 		min-width: 300px;
-		
+
 		@mixin has-box-shadow;
 
 		padding: var(--pmk-spacing-internal-large) var(--pmk-spacing-internal-medium) var(--pmk-spacing-internal-xlarge);
